@@ -11,6 +11,9 @@ linux-image (linux-3.2.54-mempo-0.1.22) UNRELEASED; urgency=low
   * using tar with --faketime and FAKETIME_TIME
   * removed kernel_debug  kernel_doc kernel_manual targets for now
   * require tar with also --sort-input
+  * using DEB_BUILD_TIMESTAMP
+  * (temp) use option --sort-input ""
+  * use tar wrapper for our version of tar (was missing previously?)
 
  -- mempo <mempo@mempo.org>  Sun, 12 Jan 2014 06:20:00 +0200
 
